_generated-doc/3.6/config/quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config.adoc

:summaryTableId: quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_configuration]]link:#quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_quarkus.elasticsearch.devservices.enabled]]`link:#quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_quarkus.elasticsearch.devservices.enabled[quarkus.elasticsearch.devservices.enabled]`


[.description]
--
If Dev Services for Elasticsearch has been explicitly enabled or disabled. Dev Services are generally enabled by default, unless there is an existing configuration present. For Elasticsearch, Dev Services starts a server unless `quarkus.elasticsearch.hosts` is set.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_DEVSERVICES_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_DEVSERVICES_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_quarkus.elasticsearch.devservices.port]]`link:#quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_quarkus.elasticsearch.devservices.port[quarkus.elasticsearch.devservices.port]`


[.description]
--
Optional fixed port the dev service will listen to.

If not defined, the port will be chosen randomly.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_DEVSERVICES_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_DEVSERVICES_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_quarkus.elasticsearch.devservices.distribution]]`link:#quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_quarkus.elasticsearch.devservices.distribution[quarkus.elasticsearch.devservices.distribution]`


[.description]
--
Defaults to a distribution inferred from the explicitly configured `image-name` (if any),
or by default to the distribution configured in depending extensions (e.g. Hibernate Search),
or by default to `elastic`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_DEVSERVICES_DISTRIBUTION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_DEVSERVICES_DISTRIBUTION+++`
endif::add-copy-button-to-env-var[]
-- a|
`elastic`, `opensearch` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_quarkus.elasticsearch.devservices.image-name]]`link:#quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_quarkus.elasticsearch.devservices.image-name[quarkus.elasticsearch.devservices.image-name]`


[.description]
--
The Elasticsearch container image to use.
Defaults depend on the configured `distribution`:

* For the `elastic` distribution: {elasticsearch-image}
* For the `opensearch` distribution: {opensearch-image}

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_DEVSERVICES_IMAGE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_DEVSERVICES_IMAGE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_quarkus.elasticsearch.devservices.java-opts]]`link:#quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_quarkus.elasticsearch.devservices.java-opts[quarkus.elasticsearch.devservices.java-opts]`


[.description]
--
The value for the ES_JAVA_OPTS env variable. Defaults to setting the heap to 512MB min - 1GB max.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_DEVSERVICES_JAVA_OPTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_DEVSERVICES_JAVA_OPTS+++`
endif::add-copy-button-to-env-var[]
--|string 
|`-Xms512m -Xmx1g`


a|icon:lock[title=Fixed at build time] [[quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_quarkus.elasticsearch.devservices.shared]]`link:#quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_quarkus.elasticsearch.devservices.shared[quarkus.elasticsearch.devservices.shared]`


[.description]
--
Indicates if the Elasticsearch server managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Elasticsearch starts a new container.

The discovery uses the `quarkus-dev-service-elasticsearch` label. The value is configured using the `service-name` property.

Container sharing is only used in dev mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_DEVSERVICES_SHARED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_DEVSERVICES_SHARED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_quarkus.elasticsearch.devservices.service-name]]`link:#quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_quarkus.elasticsearch.devservices.service-name[quarkus.elasticsearch.devservices.service-name]`


[.description]
--
The value of the `quarkus-dev-service-elasticsearch` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for Elasticsearch looks for a container with the `quarkus-dev-service-elasticsearch` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise it starts a new container with the `quarkus-dev-service-elasticsearch` label set to the specified value.

This property is used when you need multiple shared Elasticsearch servers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_DEVSERVICES_SERVICE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_DEVSERVICES_SERVICE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`elasticsearch`


a|icon:lock[title=Fixed at build time] [[quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_quarkus.elasticsearch.devservices.container-env-container-env]]`link:#quarkus-elasticsearch-devservices-elasticsearch-dev-services-build-time-config_quarkus.elasticsearch.devservices.container-env-container-env[quarkus.elasticsearch.devservices.container-env]`


[.description]
--
Environment variables that are passed to the container.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_ELASTICSEARCH_DEVSERVICES_CONTAINER_ENV+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_ELASTICSEARCH_DEVSERVICES_CONTAINER_ENV+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|

|===